avoid gap on right side of .page

--- a/source/_patterns/00-atoms/global/page/_page.scss
+++ b/source/_patterns/00-atoms/global/page/_page.scss
@@ -18,7 +18,7 @@ html {
   top: 0;
   left: 0;
   overflow-x: hidden;
-  width: 100vw;
+  width: 100%;
 }
 
 .visually-hidden {
